--- a/index.html
+++ b/index.html
@@ -27,13 +27,44 @@
         </div>
 
         <div class="menu-block">
-          <li><a href="#step2"></a>ユーザー登録をしよう！</li>
+          <li>ユーザー登録をしよう！</li>
           <i class="fas fa-angle-double-down"></i>
         </div>
+      </div>
+      <div class="slider-group">
+        <div class="slider-card">
+          <img src="./2-1.png" class="slider-card-img" />
+        </div>
+        <div class="slider-card">
+          <img src="./2-2.png" class="slider-card-img" />
+        </div>
+        <div class="slider-card">
+          <img src="./2-3.png" class="slider-card-img" />
+        </div>
+        <div class="slider-card">
+          <img src="./2-4.png" class="slider-card-img" />
+        </div>
+      </div><br>
 
         <div class="menu-block">
           <li>スポットのQRコードを読み取ろう！</li>
           <i class="fas fa-angle-double-down"></i>
+        </div>
+
+        <div class="slider-group">
+          <div class="slider-card">
+            <img src="./3-1.png" class="slider-card-img" />
+          </div>
+          <div class="slider-card">
+            <img src="./3-2.png" class="slider-card-img" />
+          </div>
+          <div class="slider-card">
+            <img src="./3-3.png" class="slider-card-img" />
+          </div>
+          <div class="slider-card">
+            <img src="./3-4.png" class="slider-card-img" />
+          </div>
+          <br />
         </div>
 
         <div class="menu-block">
@@ -41,10 +72,39 @@
           <i class="fas fa-angle-double-down"></i>
         </div>
 
+        <div class="slider-group">
+          <div class="slider-card">
+            <img src="./4-1.png" class="slider-card-img" />
+          </div>
+          <div class="slider-card">
+            <img src="./4-2.png" class="slider-card-img" />
+          </div>
+          <div class="slider-card">
+            <img src="./4-3.png" class="slider-card-img" />
+          </div>
+        </div>
+        <br />
+
         <div class="menu-block">
-          <li>スポットIDを貼り付けてスタンプをゲットしよう！</li>
+          <li>スポットIDを貼り付けよう！</li>
           <i class="fas fa-angle-double-down"></i>
         </div>
+
+        <div class="slider-group">
+          <div class="slider-card">
+            <img src="./5-1.png" class="slider-card-img" />
+          </div>
+    
+          <div class="slider-card">
+            <img src="./5-2.png" class="slider-card-img" />
+          </div>
+          <div class="slider-card">
+            <img src="./5-3.png" class="slider-card-img" />
+          </div>
+          <div class="slider-card">
+            <img src="./5-4.png" class="slider-card-img" />
+          </div>
+        </div><br>
 
         <div class="menu-block">
           <li>マップを活用しよう！</li>
@@ -52,7 +112,7 @@
         </div>
 
         <div class="menu-block">
-          <li>スタンプラリーカードで現在のスタンプ数を確認しよう！</li>
+          <li>スタンプ                 カードでスタンプ数を確認しよう！</li>
           <i class="fas fa-angle-double-down"></i>
         </div>
 
