--- a/index.html
+++ b/index.html
@@ -25,7 +25,22 @@
           <li>LINEの友達追加をしよう！</li>
           <i class="fas fa-angle-double-down"></i>
         </div>
-
+        <a href="https://lin.ee/b12Gps0S"><img src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png" alt="友だち追加" height="36" border="0"></a>
+        <div class="slider-group">
+          <div class="slider-card">
+            <img src="./1-1.png" class="slider-card-img" />
+          </div>
+          <div class="slider-card">
+            <img src="./1-2.png" class="slider-card-img" />
+          </div>
+          <div class="slider-card">
+            <img src="./1-3.png" class="slider-card-img" />
+          </div>
+          <div class="slider-card">
+            <img src="./1-4.png" class="slider-card-img" />
+          </div>
+        </div><br>
+        
         <div class="menu-block">
           <li>ユーザー登録をしよう！</li>
           <i class="fas fa-angle-double-down"></i>
@@ -115,84 +130,31 @@
           <li>スタンプ                 カードでスタンプ数を確認しよう！</li>
           <i class="fas fa-angle-double-down"></i>
         </div>
+        <div class="slider-group">
+          <div class="slider-card">
+            <img src="./7-1.png" class="slider-card-img" />
+          </div>
+          <div class="slider-card">
+            <img src="./7-2.png" class="slider-card-img" />
+          </div>
+          <div class="slider-card">
+            <img src="./7-3.png" class="slider-card-img" />
+          </div><br>
+          </div>
 
         <div class="menu-block">
           <li>景品に応募しよう！</li>
         </div>
+
+        <div class="menu-block">
+          <li>限定画像をゲットしよう！</li>
+        </div>
+        <div class="menu-block">
+          <li>修了証をゲットしよう！</li>
+        </div>
       </ul>
     </nav>
-    <div class="box">
-      <h2 id="step2">STEP２ ユーザー登録をしよう！</h2>
-    </div>
-    <div class="slider-group">
-      <div class="slider-card">
-        <img src="./2-1.png" class="slider-card-img" />
-      </div>
-      <div class="slider-card">
-        <img src="./2-2.png" class="slider-card-img" />
-      </div>
-      <div class="slider-card">
-        <img src="./2-3.png" class="slider-card-img" />
-      </div>
-      <div class="slider-card">
-        <img src="./2-4.png" class="slider-card-img" />
-      </div>
-    </div>
-    <br />
-    <div class="box">
-      <h2>STEP３ スポットのQRコードを<br />読み取ろう！</h2>
-    </div>
-    <div class="slider-group">
-      <div class="slider-card">
-        <img src="./3-1.png" class="slider-card-img" />
-      </div>
-      <div class="slider-card">
-        <img src="./3-2.png" class="slider-card-img" />
-      </div>
-      <div class="slider-card">
-        <img src="./3-3.png" class="slider-card-img" />
-      </div>
-      <div class="slider-card">
-        <img src="./3-4.png" class="slider-card-img" />
-      </div>
-      <br />
-    </div>
-
-    <div class="box">
-      <h2>STEP４ スポットIDをコピーしよう！</h2>
-    </div>
-    <div class="slider-group">
-      <div class="slider-card">
-        <img src="./4-1.png" class="slider-card-img" />
-      </div>
-      <div class="slider-card">
-        <img src="./4-2.png" class="slider-card-img" />
-      </div>
-      <div class="slider-card">
-        <img src="./4-3.png" class="slider-card-img" />
-      </div>
-    </div>
-    <br />
-
-    <div class="box">
-      <h2>STEP５ スポットIDを貼り付けて<br />スタンプをゲットしよう！</h2>
-    </div>
-    <div class="slider-group">
-      <div class="slider-card">
-        <img src="./5-1.png" class="slider-card-img" />
-      </div>
-
-      <div class="slider-card">
-        <img src="./5-2.png" class="slider-card-img" />
-      </div>
-      <div class="slider-card">
-        <img src="./5-3.png" class="slider-card-img" />
-      </div>
-      <div class="slider-card">
-        <img src="./5-4.png" class="slider-card-img" />
-      </div>
-    </div>
-  </body>
+    
 
   <style>
     ul.menu {
