--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
 
         <div class="menu-block">
-          <li>スタンプ                 カードでスタンプ数を確認しよう！</li>
+          <li>スタンプカードでスタンプ数を確認しよう！</li>
           <i class="fas fa-angle-double-down"></i>
         </div>
         <div class="slider-group">
@@ -144,12 +144,16 @@
 
         <div class="menu-block">
           <li>景品に応募しよう！</li>
+          <i class="fas fa-angle-double-down"></i>
+          <h2>10スタンプごとに景品に応募できます！</h2>
         </div>
 
         <div class="menu-block">
           <li>限定画像をゲットしよう！</li>
+          <i class="fas fa-angle-double-down"></i>
         </div>
         <div class="menu-block">
+          <i class="fas fa-angle-double-down"></i>
           <li>修了証をゲットしよう！</li>
         </div>
       </ul>
