--- a/index.html
+++ b/index.html
@@ -158,8 +158,75 @@
         </div>
       </ul>
     </nav>
-    
 
+     <nav>
+    <ul class="bottomMenu">
+      <li>
+        <a href="https://chikarauemori.github.io/test57/" target="_self"
+          ><i class="fa-solid fa-house"></i><br /><span class="iconname"
+            >ホーム</span
+          ></a
+        >
+      </li>
+      <li>
+        <a href="https://chikarauemori.github.io/test62/" target="_self"
+          ><i class="fa-solid fa-location-dot"></i><br /><span class="iconname"
+            >マップ</span
+          ></a
+        >
+      </li>
+      <li>
+        <a
+          href="
+        https://chikarauemori.github.io/test77/" target="_self"
+          ><i class="fa-regular fa-list-ol"></i><br /><span class="iconname"
+            >遊び方</span
+          ></a
+        >
+      </li>
+      <li>
+        <a href="https://liff.line.me/2007154146-Y5jGo0G3" target="_self"
+          ><i class="fa-solid fa-circle-user"></i><br /><span class="iconname"
+            >マイページ</span
+          ></a
+        >
+      </li>
+    </ul>
+  </nav>
+
+    <style>
+      .bottomMenu li {
+        display: inline-block;
+        text-align: center;
+      }
+
+      .bottomMenu a {
+        text-decoration: none;
+        color: black;
+      }
+
+      .bottomMenu a i {
+        font-size: 24px;
+      }
+
+      .bottomMenu a span {
+        display: block;
+        font-size: 12px; /* テキストサイズ */
+        margin-top: 5px;
+      }
+
+      @media (max-width: 768px) {
+        .bottomMenu {
+          display: grid;
+          grid-template-columns: repeat(4, 1fr);
+        }
+
+        .bottomMenu li {
+          padding: 5px;
+        }
+      }
+      </style>
+    
   <style>
     ul.menu {
       list-style: none;
