--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
     />
   </head>
   <body>
+    <h1>
+        <img
+          src="https://i.ibb.co/Wv8X3LVh/1.png"
+          alt="IMG-5451"
+          width="100px"
+          height="100px"
+        />
+        クールシェア宝塚2025<br />
+        スタンプラリーカード
+      </h1>
     <nav>
       <h2>スタンプラリー 遊び方</h2>
       <ul class="menu">
@@ -195,6 +205,20 @@
   </nav>
 
     <style>
+
+       h1 {
+        font-family: sans-serif;
+        display: flex;
+        align-items: center; /* 縦方向の中央揃え */
+        justify-content: center; /* 横方向の中央揃え */
+        text-align: center;
+        background: skyblue;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 10px;
+        font-size: 85%;
+      }
+      
       .bottomMenu li {
         display: inline-block;
         text-align: center;
