--- a/index.html
+++ b/index.html
@@ -218,6 +218,18 @@
         padding-left: 10px;
         font-size: 85%;
       }
+
+      .bottomMenu {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        background: white;
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        padding: 10px 0;
+        box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+      }
       
       .bottomMenu li {
         display: inline-block;
