--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             justify-content: space-between;
             align-items: center;
             padding: 0,20px;
-            background: #fff;
+            background: skyblue;
         }
 
         .logo{
@@ -431,7 +431,7 @@
      padding-top: 10px;
      padding-bottom: 10px;
      padding-left: 10px;
-     font-size: 110%;
+     font-size: 85%;
    }
 
    .bottomMenu {
