--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               width="100px"
               height="100px"
             />
-            クールシェアたからづか 2025<br />
+            クールシェアたからづか<br />
             遊び方
           </h1></div>
         <div class="nav">
