--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
             align-items: center;
             padding: 0,20px;
             background: skyblue;
+            position: fixed;
+            top: 0;
         }
 
         .logo{
