--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             padding: 0,20px;
             background: skyblue;
             position: fixed;
-            top: 0;
+            top: 0px;
         }
 
         .logo{
