--- a/index.html
+++ b/index.html
@@ -340,6 +340,8 @@
         </div>
       </div><br>
 
+        <button class="menuButton">メニューを開く</button>
+
       <div class="menu-block">
         <li class="li2" id="li6">スタンプカードの背景を変更しよう！</li>
         <i class="fas fa-angle-double-down"></i>
@@ -361,7 +363,7 @@
         <div class="slider-card">
           <img src="./7-3.png" class="slider-card-img" />
         </div><br>
-        </div>
+        </div><br>
 
         <button class="menuButton">メニューを開く</button>
 
@@ -380,7 +382,7 @@
       <div class="menu-block">
         <i class="fas fa-angle-double-down"></i>
         <li class="li2" id="li10">修了証をゲットしよう！</li>
-      </div>
+      </div><br>
 
       <button class="menuButton">メニューを開く</button>
     </ul>
